Sample code that actually compiles math @N-Echo u might want to look at this

--- a/docs/PC5132.md
+++ b/docs/PC5132.md
@@ -1,4 +1,4 @@
-# **Neutron Stars**
+# Neutron Stars
 
 You may have heard of neutron stars before, but what really are they?
 Neutron stars are very nearly the densest objects in the universe. 
@@ -42,7 +42,7 @@ function check() {
 
 </details>
 
-## **Pauli and his Principle**
+## Pauli and his Principle
 
 The Pauli Exclusion principle is something that we all encounter on a daily basis. It is the
 law of the universe that prevents your laptop from falling through your lap. Formally, it
@@ -55,7 +55,9 @@ the necessary pressure.
 This is referred to as electron degeneracy pressure. To understand it more specifically, we
 must introduce another principle: Heisenberg Uncertainty. Formally, the Heisenberg
 Uncertainty principle states:
+
 $$\Delta x \Delta p = \frac{\hbar}{2}$$
+
 Let's break that down. $\Delta x$ refers to the uncertainty in position, which you can think of as
 in how many places the particle could be. $\Delta p$ refers to the uncertainty in momentum, which
 you can also think of as the range of values that it's momentum (Velocity times Mass) could
@@ -70,9 +72,9 @@ this means that they have exceptionally high velocity, even in the confused part
 of neutron stars, and contribute the most to the outward pressure.
 
 
-## **Why they're called neutron stars**
+## Why they're called neutron stars
 
-As you may have guessed, Neutron stars 
+As you may have guessed, Neutron stars are made of neutrons
 ## The structures of Neutron Star
 # Quark Stars
 # Now things get Strange
