--- a/docs/1.md
+++ b/docs/1.md
@@ -31,13 +31,13 @@ But what is this principle?
 <details>
 <summary>Self Check</summary>
 
-<span style='font-size: 3ch'> What is your favourite language? </span>
+<span class='question'> What is your favourite language? </span>
 <div class='quiz'>
     <button class="quizBtn" name="Q1_right" onClick="markQ1.call(this)">HTML</button>
     <button class="quizBtn" name="Q1_wrong" onClick="markQ1.call(this)">CSS</button>
     <button class="quizBtn" name="Q1_wrong" onClick="markQ1.call(this)">Java</button>
     <hr>
-    <div id='test'></div>
+    <div class="result" id='test'></div>
 </div> 
 
 <script>
