--- a/docs/1.md
+++ b/docs/1.md
@@ -1,3 +1,8 @@
+---
+hide:
+- toc
+---
+
 # Neutron Stars
 
 <img src="https://d2kspx2x29brck.cloudfront.net/1200x675/filters:format(webp)/img/iea/y5wWkZZlwX/what-is-a-neutron-star-1.jpg"></img>
@@ -21,11 +26,11 @@ This increase in temperature and pressure triggers another round of fusion, fusi
 
 The remains of the star rush in towards the centre, building up insane pressures as they pick up momentum. But even as they build momentum, atoms at the centre push closer and closer to one another, until they can't get any closer. The wavefront of the incoming stellar matter impinges on the hyper-dense core, bounces, sends shockwaves back out through the dying star.
 
-No matter what happens next, the vast majority of the star is blown off in a cataclysmic explosion that creates what's (poorly termed) as a planetary nebula, a new stellar dust and gas cloud. If the star was big enough, then the very insides of the star get dense enough that gravity can overcome the Pauli Exclusion principle (we'll get to that later) and form a black hole, a region of space where all matter is drawn in irreversibly towards a singularity, and gravity overcomes even light.
+No matter what happens next, the vast majority of the star is blown off in a cataclysmic explosion that creates what's (poorly termed) as a planetary nebula, a new stellar dust and gas cloud. If the star was big enough, then the very insides of the star get dense enough it turns into a black hole, a region of space where all matter is drawn in irreversibly towards a singularity, and gravity overcomes even light.
 
-If the star wasn't quite massive enough, though, what's formed is instead a neutron star, and that's where things get weird. All stars are permanently in a precarious balance between collapse and expansion, with the inward force of gravity being perfectly balanced by the outwards pressure of the hot plasma. Neutron stars are different, though; heat-based pressure being insufficient to overcome gravity, they're stopped from collapsing by the Pauli Exclusion principle.
+If the star wasn't quite massive enough, though, what's formed is instead a neutron star, and that's where things get weird. All stars are permanently in a precarious balance between collapse and expansion, with the inward force of gravity being perfectly balanced by the outwards pressure of the hot plasma. Neutron stars are different. In neutron stars, Heat-based pressure is not enough to overcome gravity. Instead, the stronger neutron degeneracy pressure stops neutron stars from collapsing.
 
-But what is this principle?
+But what is that?
 
 <!-- Quiz -->
 <details>
