--- a/docs/2.md
+++ b/docs/2.md
@@ -1,19 +1,22 @@
+To understand Neutron Degeneracy pressure and how it arises, we must first understand Pauli's Exclusion Principle.
+
 ## Pauli and his Principle
 The Pauli Exclusion Principle is something that we all encounter on a daily basis. It is the
 law of the universe that prevents your laptop from falling through your lap. Formally, it
 states that two Fermions (the particles that make up most matter) cannot occupy the same quantum states. More informally, two things cannot be in the same place, at the same energy level, with the same spin, at the same time. In neutron stars, this means that when mere heat is insufficient to halt collapse, the particles physically bumping into each other halts it instead.
 
-This is referred to as neutron degeneracy pressure. To understand it more specifically, we
-must introduce another principle: Heisenberg Uncertainty. 
+This is neutron degeneracy pressure. 
+To gain a more detailed understanding, we need Heisenberg Uncertainty Principle. 
 
 ## Heisenberg's Uncertainty Principle
 Formally, the Heisenberg Uncertainty Principle states:
+
 $$\Delta x \Delta p \ge \frac{\hbar}{2}$$
 
 Let's break that down. $\Delta x$ refers to the uncertainty in position, which you can think of as
-how many places the particle could be in. $\Delta p$ refers to the uncertainty in momentum, which you can also think of as the range of values that its momentum (velocity times mass) could take. $\hbar$ is known as the reduced Planck constant, and being a constant, is not relevant to our understanding here.
+how many places the particle could be in. $\Delta p$ refers to the uncertainty in momentum, which you can also think of as the range of values that its momentum (velocity times mass) could take. $\hbar$ is known as the reduced Planck constant, and being a constant, it is not relevant to our understanding here.
 
-## Neutron Degeneracy Pressure
+## Inside Neutron Stars
 So how is this relevant? In neutron stars, where pressures are extreme and particles
 are compacted similarly extremely together, $\Delta x$ is very small. Correspondingly, this means
 that $\Delta p$ must be very large. This leads to very high momentum (you can't be uncertain about momentum you don't have).
