--- a/docs/1.md
+++ b/docs/1.md
@@ -12,7 +12,7 @@ hide:
 > In space with darkness close to tar,    <br>
 > neutron stars fights back with its last light.*
 
-You may have heard of neutron stars before, but what really are they?
+You may have heard of neutron stars before, but what are they really?
 
 Neutron stars are very nearly the densest objects in the universe. Rarely more than a couple dozen kilometres across, but with masses greater than the sun, they are eclipsed only in extremeness by black holes. There's a reason Hollywood has recently fallen in love with them. But how do we go from a normal star to a neutron star?
 
