--- a/docs/3.md
+++ b/docs/3.md
@@ -2,12 +2,52 @@
 
 As you may have guessed, neutron stars are made primarily out of neutrons. If you need a refresher, neutrons, along with protons, are what make up the nuclei of atoms ("nuclei" are the hard centres of atoms, surrounded by fuzzy layers of electrons). But all these neutrons have to come from somewhere, and in neutron stars, that turns out to be from the combining of protons and electrons.
 
+<figure>
+
+<p align="center">
+<image src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Helium_atom_QM.svg/598px-Helium_atom_QM.svg.png?20201020092751"/>
+<p/>
+
+<figcaption align = "left">
+<small>A depiction of a Helium atom. The neutrons are represented in purple, and protons in red, and together make up the central pink dot. The dark cloud surrounding the central dot represents the electron cloud of the atom.</small>
+</figcaption>
+
+</figure>
+
 Under the incredible pressures inside neutron stars, at a certain point, compressing the same stuff into a smaller volume becomes inefficient. Instead, it's more energetically viable to compress particles together, fusing negatively charged electrons and positively charged protons together to form neutral neutrons. It's so much more viable, in fact, that as one gets deeper into a neutron star, neutrons are nearly the only things you'll find.
 
 Neutron stars are, as mentioned before, incredibly extreme, even amongst stars. In neutron stars, we find the strongest magnetic fields in existence, the strongest gravitational fields bar black holes, and the highest pressures known to man. They're also very hot. Despite all this, however, neutron stars aren't very bright. This might seem a little strange to you at first, because it's generally known that hotter things glow brighter. But this is where possibly the most extreme aspect of neutron stars comes in; their size.
 
 Neutron stars are tiny. The average neutron star is about 20 kilometres across. To put that in perspective, that's about the length of Manhattan, in New York. As a point of comparison, our sun, already larger than most stars in the universe, is about 1.4 million kilometres across, or 66 thousand Manhattans. Consider then that volume is given by the cube of radius, and we arrive at the astounding realisation that you could fit a million billion neutron stars in our sun.
 
+<figure>
+
+<p align="center">
+<image src="https://svs.gsfc.nasa.gov/vis/a010000/a010800/a010858/Neutron_Star_Manhattan_Update.jpg"/>
+<p/>
+
+<figcaption align = "left">
+<small>Rendition of a neutron star, next to Manhattan.</small>
+</figcaption>
+
+</figure>
+
 As a consequence of this, neutron stars are unbelievably dense. Indeed, while they may only be a miniscule fraction of the volume of the sun, the average neutron star actually weighs more than the sun! At 1.5 solar masses, with their tiny sizes, neutron stars are the second densest objects in the universe, behind black hole singularities (with all their poorly defined density). Just a single millilitre of neutron star material would weigh as much as the combined weight of about 70% of all people alive today.
 
 The insides of neutron stars are somewhat unknown to us, and we only have theories, but those theories tell us that it probably starts out as iron, turns into spaghetti, and then becomes soup. Indeed, the scientific term for the matter in the inner crusts of neutron stars is "Nuclear Pasta". So let's dig in, shall we?
+
+
+References:
+
+S. Walpole, D. Prieto-Merino, P. Edwards, J. Cleland, "The weight of nations: An estimation of adult human biomass", _BMC Public Health_, 2012, doi: [10.1186/1471-2458-12-439](http://dx.doi.org/10.1186/1471-2458-12-439)
+
+M. E. Caplan, A. S. Schneider, C. J. Horowitz, D. K. Berry, "Pasta Nucleosynthesis: Molecular dynamics simulations of nuclear statistical equilibrium", _American Physical Society_, vol. 91,  065802, June 2015, doi: https://doi.org/10.1103/PhysRevC.91.065802
+
+A. Heger, C. L. Fryer, S. E. Woosley, N. Langer, and D. H. Hartmann, How massive single stars end their life, _The Astrophysical Journal_, vol. 591, 288, 2003, doi: http://dx.doi.org/10.1086/375341
+
+
+Images:
+
+[1] Wikipedia Commons, https://commons.wikimedia.org/wiki/File:Helium_atom_QM.svg
+
+[2] NASA, Goddard Media Studios, https://svs.gsfc.nasa.gov/vis/a010000/a010800/a010858/
