--- a/docs/5.md
+++ b/docs/5.md
@@ -1,8 +1,6 @@
 # Quark stars
 
-<p align="center">
-<image src =https://static.wikia.nocookie.net/beyond-universe/images/e/e6/Qunium_Star.jpg/revision/latest?cb=20210719050635/>
-<p/>
+<img style="width: 60%" src="https://hips.hearstapps.com/pop.h-cdn.co/assets/16/46/640x352/gallery-1479416701-screen-shot-2016-11-17-at-40413-pm.jpg?resize=1200:*">
 
 With the idea of neutron stars already introduced, where gravity is so intense that electrons and protons fuse to form neutrons, it seems natural to ask: What if we tried more pressure?
 
@@ -11,22 +9,17 @@ The answer is a quark star. Contrary to the name, quark stars are not necessaril
 To explain what happens now, we must introduce the idea of quarks in the first place. Quarks are, simply put, the building blocks of Hadrons, a category of particles that includes protons and neutrons. In protons and neutrons, quarks are "bound" together in trios, interacting through other particles called gluons. In a proton, the trio is of two "up" quarks and 1 "down" quark. In a neutron, it's of two down quarks and an up quark. But why does this matter?
 
 <figure>
-
-<p align="center">
-<image src="https://upload.wikimedia.org/wikipedia/commons/b/bf/Neutron_quark_structure.svg"/>
-</p>
-
-<figcaption align = "left">
-<small>Representation of the structure of a Neutron. The colours are not relevant here, but what does matter to us is that there are two down quarks (denoted with a d) and an up quark (denoted with a u). The beige lines signify the presence of gluons, another type of fundamental particle.</small>
-</figcaption>
-
+    <img src="https://upload.wikimedia.org/wikipedia/commons/b/bf/Neutron_quark_structure.svg"/>
+    <figcaption align = "left">
+    <small>Representation of the structure of a Neutron. The colours are not relevant here, but what does matter to us is that there are two down quarks (denoted with a d) and an up quark (denoted with a u). The beige lines signify the presence of gluons, another type of fundamental particle.</small>
+    </figcaption>
 </figure>
 
 It turns out that at high enough pressures, the degeneracy pressure of neutrons is overcome. Here, neutrons are forced to dissolve, forming a hyper-dense phase of degenerate matter, comprised of tightly-packed quarks. This is referred to as quark matter, and there are two main possible forms of "stable" quark matter.
 
 The first is referred to as a quark-gluon plasma. In this plasma, free quarks swim around in a sea of gluons. So far, scientists have created quark-gluon plasmas at extreme temperatures (300000 times hotter than the core of the sun), and have already found that they exhibit surprising characteristics. For instance, rather than acting like particles in a gas, quark-gluon plasmas actually flow like liquids. Still, though, we have only been able to create these plasmas on very short timescales. Furthermore, we create these quark-gluon plasmas in particle accelerators. By contrast, the cores of neutron stars are at significantly lower temperatures, and much higher pressures. As such, we do not know if quark-gluon plasmas can actually form in the cores of neutron stars.
 
-There is another form of "stable" quark matter, however, and here things get a bit stranger.
+There is another form of "stable" quark matter, and here things get a bit stranger.
 
 
 References:
