--- a/docs/8.md
+++ b/docs/8.md
@@ -18,15 +18,11 @@ When the strong force acts at the scale of around 0.8 femtometres (the insides o
 The important thing here is that the strength of the strong force is independent of distance between pairs of quarks, but when it's between trios of quarks, such as in Neutrons and Protons, it stops being so. Instead, when in trios, the quarks kinds of "cancel" each other out. This cancelation isn't perfect, through, and what happens is that we get a very quickly decaying force that's usually called the residual strong force.
 
 This residual strong force, it turns out, is what's really keeping neutrons and protons together. And that also explains why it doesn't manifest itself obviously at the scale of our lives, like gravity does. But how does this relate to Neutron Stars?
-<p align="center">
 <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/ReidForce2.jpg"/>
-<p/>
 
 Well, as you can see from the graph above, it's not strictly true that the residual strong force is always attractive. At very small distances, about 0.8 femtometres (hence the above statements), the residual strong force is actually repulsive. Thus, when the neutrons in a neutron star really are compressed very densely, the repulsive effects of the residual strong force start to be significant.
 
 
-Further reading:
-
-https://profmattstrassler.com/articles-and-posts/particle-physics-basics/the-known-forces-of-nature/the-strength-of-the-known-forces/
-
-http://webhome.phy.duke.edu/~kolena/modern/forces.html#005
+## Additional Materials
+<https://profmattstrassler.com/articles-and-posts/particle-physics-basics/the-known-forces-of-nature/the-strength-of-the-known-forces/>
+<http://webhome.phy.duke.edu/~kolena/modern/forces.html#005>
