--- a/docs/2.md
+++ b/docs/2.md
@@ -5,19 +5,16 @@ states that two Fermions (the particles that make up most matter) cannot occupy 
 
 This is called neutron degeneracy pressure. To understand it more thoroughly, we must introduce another principle: Heisenberg Uncertainty.
 
+## Heisenberg's Uncertainty Principle
 <figure>
-
-<p align="center">
-<image src="https://www.atomicarchive.com/img/bios/heisenberg.jpg"/>
-<p/>
-
-<figcaption align = "left">
-<small>Werner Heisenberg, Nobel Laureate. In addition to the principle that is his namesake, he made many other contributions to quantum mechanics, such as in the problem of plasma physics. He also participated in the effort to develop a fundamental theory of particles.</small>
-</figcaption>
-
+    <img src="https://www.atomicarchive.com/img/bios/heisenberg.jpg"/>
+    <figcaption align = "left">
+    <small>
+        Werner Heisenberg, Nobel Laureate. In addition to the principle that is his namesake, he made many other contributions to quantum mechanics, such as in the problem of plasma physics. He also participated in the effort to develop a fundamental theory of particles.
+    </small>
+    </figcaption>
 </figure>
 
-## Heisenberg's Uncertainty Principle
 Formally, the Heisenberg Uncertainty Principle states:
 
 $$\Delta x \Delta p \ge \frac{\hbar}{2}$$
@@ -26,22 +23,17 @@ Let's break that down. $\Delta x$ refers to the uncertainty in position, which y
 how many places the particle could be in. $\Delta p$ refers to the uncertainty in momentum, which you can also think of as the range of values that its momentum (velocity times mass) could take. $\hbar$ is known as the reduced Planck constant, and being a constant, is irrelevant to our understanding here.
 
 ## Inside Neutron Stars
-So how is this relevant? In neutron stars, where particles are compacted extremely close together, $\Delta x$ is very small. Correspondingly, this means that $\Delta p$ must be very large. Because of this, the average kinetic energy of the particles must be very large. (Kinetic Energy is related to momentum by $KE =p^2/2m$)
+So how is this relevant? In neutron stars, where particles are compacted extremely close together, $\Delta x$ is very small. Correspondingly, this means that $\Delta p$ must be very large. Because of this, the average kinetic energy of the particles must be very large. (Kinetic Energy is related to momentum by $KE =\frac{p^2}{2m}$)
 
 We can see, then, that if high compression necessitates low position uncertainty, and low position uncertainty means high momentum, and high momentum means high energy, a tremendous amount of energy is required to squeeze neutron stars any further. This manifests itself as an outward pressure of sorts, referred to as degeneracy pressure. Matter, such as the plasmas in neutron stars, that is stopped from being crushed mainly by degeneracy pressure is known as degenerate matter.
 
 
-References:
-
-A. G. Truscott, K. E. Strecker, W. I. McAlexander, G. Partridge, R. G. Hulet, "Observation of Fermi Pressure in a Gas of Trapped Atoms", _Science_, March 2001
-
-https://apod.nasa.gov/apod/ap100228.html
-
-Wolfgang Pauli's Nobel Lecture: https://www.nobelprize.org/prizes/physics/1945/pauli/lecture/
-
-W. Heisenberg, THE ACTUAL CONTENT OF QUANTUM THEORETICAL KINEMATICS AND MECHANICS, NASA Technical Memorandum, December 1983, https://ntrs.nasa.gov/api/citations/19840008978/downloads/19840008978.pdf
+### References
+- A. G. Truscott, K. E. Strecker, W. I. McAlexander, G. Partridge, R. G. Hulet, "Observation of Fermi Pressure in a Gas of Trapped Atoms", _Science_, March 2001
+- https://apod.nasa.gov/apod/ap100228.html
+- Wolfgang Pauli's Nobel Lecture: https://www.nobelprize.org/prizes/physics/1945/pauli/lecture/
+- W. Heisenberg, THE ACTUAL CONTENT OF QUANTUM THEORETICAL KINEMATICS AND MECHANICS, NASA Technical Memorandum, December 1983, https://ntrs.nasa.gov/api/citations/19840008978/downloads/19840008978.pdf
 
 
-Images:
-
+### Images
 [1] Atomic Archive: https://www.atomicarchive.com/resources/biographies/heisenberg.html
