--- a/docs/6.md
+++ b/docs/6.md
@@ -1,14 +1,10 @@
-## Strange Matter
-
 As previously mentioned, neutrons are comprised of two down quarks and an up quark. But under particularly extreme pressures and densities, when all lower energy levels are filled, a new possibility arises. Some energy can be expended to turn down quarks into more massive "strange" quarks. The introduction of these strange quarks allows for new configurations, unlocking a new set of energy levels. By accessing these new, lower, energy levels, the energy required to transmute down quarks can be recouped. Thus, the average energy of the particles decreases. Matter that contains strange quarks is referred to as strange matter.
 
 Strange matter is generally though to form blobs, referred to as strangelets, which can range in size from the scale of nuclei to arbitrarily large. When they get to the size of meters, stranglets are usually referred to as strange stars. Quantum Chromodynamics, or QCD, predicts that strange matter is unstable on the tiniest of scales (individual particles), because of the increased mass of the strange quark. However, it also predicts that on larger scales, precisely because of the aforementioned lower energy levels that the presence of strange quarks allows for, strange matter may become more and more stable the more of it there is.
 
 <figure>
 
-<p align="center">
-<image src="https://i.gzn.jp/img/2019/04/16/most-dangerous-in-universe/snap0503_m.png"/>
-</p>
+<img style="width: 100%" src="https://i.gzn.jp/img/2019/04/16/most-dangerous-in-universe/snap0503_m.png"/>
 
 <figcaption align = "left">
 <small>Order-of-magnitude illustration of the sizes of strange particles, strangelets, and strange stars.</small>
@@ -20,7 +16,7 @@ There's another aspect to strange matter, that is considerably more sinister in 
 
 "Stability" is a measure of something's reluctance to change. A pen balanced on its tip is very unstable, and changes readily. A stone on the ground, by contrast, is relatively stable, and does not begin rolling over of its own accord. Crucially, however, stability is relative; there is no absolute stability, merely "more stable" and "less stable".
 
-So when we say that strange matter is more stable than ordinary matter, what do we actually mean? We mean that, just like a pen balanced on its tip "wants" to fall down, ordinary matter "wants to" turn into strange matter. We mean that, past a certain point, the transition of ordinary matter into strange matter should be automatic, and indeed, unstoppable.
+So when we say that strange matter is more stable than ordinary matter, what do we actually mean? We mean that, just like a pen balanced on its tip "wants" to fall down, ordinary matter "wants" to turn into strange matter. We mean that, past a certain point, the transition of ordinary matter into strange matter should be automatic, and indeed, unstoppable.
 
 If we follow this line of reasoning, all ordinary matter should slowly decay into strange matter, with each medium-size strangelet produced resulting in an ever-expanding strange star consuming everything in its vicinity, releasing tremendous amounts of energy in the process. However, for a nucleus to form a stable stranglet, many down quarks would have to near-simultaneously transmute into strange quarks, so even if this hypothesis is true, we likely do not have to worry about cosmic armageddon. Still, the possibility of strange matter is something that scientists are still actively looking into.
 
