--- a/docs/7.md
+++ b/docs/7.md
@@ -1,5 +1,3 @@
-## Appendix 1: Degeneracy
-
 You may have seen the terms "degenerate matter" or "neutron degenerate" pop up a few times on this website. For the sake of brevity, we chose to leave it at that. But here, we will go into what degeneracy is, why it exists, and why we care.
 
 In quantum mechanics, a system is called "degenerate" if it allows for multiple different configurations to give the same overall energy. That is, if you were to measure the system's energy, you would not be able to tell exactly what state it is in. This comes about because of the idea of quantum energy levels; each particle can be in a certain state, and many of these states have the same energy levels. If you've learned about orbitals in chemistry, an example of degeneracy is how the 2p subshell has three orbitals, in the x, y, and z orientations. Measuring the energy of the system does not tell you which of the 2p orbitals are filled, only that some of them are.
@@ -9,10 +7,10 @@ The more filled states that have duplicate energy levels, the more degenerate so
 In the context of stars, however, degeneracy takes on a slightly different meaning. We can see that as density increases, degeneracy pressure becomes more of a factor. As such, the degree to which matter is degenerate, in this specific context, is determined by the relative contributions of degeneracy pressure and thermal pressure. Note that, as is implied here, degeneracy pressure is independent of temperature.
 
 That's all a little abstract, so let's simplify matters a bit.
-If something has low density (for a star) and high temperature, it's probably normal matter.
-If something has high density and low temperature (for a star), it's probably degenerate matter.
-If something has low density and low temperature, it's probably still normal matter.
-If something has high density and high temperature, it might still be degenerate matter.
+If something has low density (for a star) and high temperature, it's probably normal matter. <br/>
+If something has high density and low temperature (for a star), it's probably degenerate matter. <br/>
+If something has low density and low temperature, it's probably still normal matter. <br/>
+If something has high density and high temperature, it might be degenerate matter. <br/>
 
 The last one is less clear-cut than the others. For instance, we have examples of degenerate matter abruptly turning non-degenerate, through a sudden influx of heat.
 
