--- a/docs/3.md
+++ b/docs/3.md
@@ -1,4 +1,7 @@
-## Why they're called neutron stars
+---
+hide:
+- toc
+---
 
 As you may have guessed, neutron stars are made primarily out of neutrons. If you need a refresher, neutrons, along with protons, are what make up the nuclei of atoms ("nuclei" are the hard centres of atoms, surrounded by fuzzy layers of electrons). But all these neutrons have to come from somewhere, and in neutron stars, that turns out to be from the combining of protons and electrons.
 
