--- a/docs/5.md
+++ b/docs/5.md
@@ -1,3 +1,7 @@
+---
+hide:
+- toc
+---
 # Quark stars
 
 <img style="width: 60%" src="https://hips.hearstapps.com/pop.h-cdn.co/assets/16/46/640x352/gallery-1479416701-screen-shot-2016-11-17-at-40413-pm.jpg?resize=1200:*">
