--- a/docs/7.md
+++ b/docs/7.md
@@ -1,3 +1,8 @@
+---
+hide:
+- toc
+---
+
 You may have seen the terms "degenerate matter" or "neutron degenerate" pop up a few times on this website. For the sake of brevity, we chose to leave it at that. But here, we will go into what degeneracy is, why it exists, and why we care.
 
 In quantum mechanics, a system is called "degenerate" if it allows for multiple different configurations to give the same overall energy. That is, if you were to measure the system's energy, you would not be able to tell exactly what state it is in. This comes about because of the idea of quantum energy levels; each particle can be in a certain state, and many of these states have the same energy levels. If you've learned about orbitals in chemistry, an example of degeneracy is how the 2p subshell has three orbitals, in the x, y, and z orientations. Measuring the energy of the system does not tell you which of the 2p orbitals are filled, only that some of them are.
