--- a/docs/8.md
+++ b/docs/8.md
@@ -1,9 +1,12 @@
-## Appendix 2) The Strong Force
+---
+hide:
+- toc
+---
 
 There are four fundamental forces (kind of).
 
 The first is the gravitational force.
-The second is the electromagetic force.
+The second is the electromagnetic force.
 The third is the weak nuclear force.
 And the last is the strong nuclear force.
 
@@ -15,7 +18,7 @@ As for why the strong force doesn't dominate at larger scales, well, that's a li
 
 When the strong force acts at the scale of around 0.8 femtometres (the insides of a proton), it is a force that is 'carried' by gluons, and binds quarks together. When it acts instead at the scale of around 1 to 3 femtometres, it's a force mediated by a category of particles known as Mesons, which binds Neutrons and Protons together.
 
-The important thing here is that the strength of the strong force is independent of distance between pairs of quarks, but when it's between trios of quarks, such as in Neutrons and Protons, it stops being so. Instead, when in trios, the quarks kinds of "cancel" each other out. This cancelation isn't perfect, through, and what happens is that we get a very quickly decaying force that's usually called the residual strong force.
+The important thing here is that the strength of the strong force is independent of distance between pairs of quarks, but when it's between trios of quarks, such as in Neutrons and Protons, it stops being so. Instead, when in trios, the quarks kinds of "cancel" each other out. This cancellation isn't perfect, through, and what happens is that we get a very quickly decaying force that's usually called the residual strong force.
 
 This residual strong force, it turns out, is what's really keeping neutrons and protons together. And that also explains why it doesn't manifest itself obviously at the scale of our lives, like gravity does. But how does this relate to Neutron Stars?
 <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/ReidForce2.jpg"/>
