--- a/docs/9.md
+++ b/docs/9.md
@@ -1,4 +1,7 @@
-## Appendix 3) Overcoming the Exclusion Principle
+---
+hide:
+- toc
+---
 
 This appendix is more of a footnote, but tackles a rather important question:
 
