Fixed english in Appendix 3

--- a/docs/9.md
+++ b/docs/9.md
@@ -11,4 +11,6 @@ The really short answer here is, we're not entirely sure, but there are ways for
 
 The slightly longer answer is that during a star's collapse into a black hole, we know that it cannot be made of Fermions, i.e. the type of particles that the Pauli Exclusion Principle governs. Just as the conditions of neutron stars make it favourable for protons and electrons to merge into neutrons, when they would not otherwise do so, it is predicted that during core collapse, whatever Fermions exist would transform into some kinds of Bosons.
 
-Bosons, since we haven't brought them up before, are the other big category of particles. You may have heard of the Higgs Boson before, and that is indeed a type of boson. Similarly, Gluons (which we have mentioned many times), as well as the humble Photon. As implied above, Bosons are not bound by the Pauli Exclusion Principle, and will happily occupy the same quantum states. This allows for gravity to finally win, and create a black hole.
+Bosons, since we haven't brought them up before, are the other big category of particles. You may have heard of the Higgs Boson before, and that is indeed a type of boson. Similarly, Gluons (which we have mentioned many times), as well as the humble Photon, are also Bosons. As implied above, Bosons are not bound by the Pauli Exclusion Principle, and will happily occupy the same quantum states. This allows for gravity to finally win, and create a black hole.
+
+As for what kinds of Bosons are formed, or through what mechanisms, that's still an open question. It's possible that developments in particle accelerators, breakthroughs in one of the many Grand Unified Theories (GUTs) that have been proposed over the years, or the rise of new anomalies might give us clues. But then again, we may never know. The same, though to a lesser extent, goes for strange matter as well.
