--- a/docs/1.md
+++ b/docs/1.md
@@ -56,6 +56,6 @@ But what is this principle?
 - <https://wwwmpa.mpa-garching.mpg.de/mpa/institute/news_archives/news1109_janka/news1109_janka-en-print.html>
 
 ### Images
-[^1]: Kevin Gill, https://www.flickr.com/photos/kevinmgill/14773475650
-[^2]: NASA, https://images.nasa.gov/details-PIA17563
-[^3]: Event Horizon Telescope Collaboration https://eventhorizontelescope.org/blog/astronomers-reveal-first-image-black-hole-heart-our-galaxy
+[1] Kevin Gill, https://www.flickr.com/photos/kevinmgill/14773475650
+[2] NASA, https://images.nasa.gov/details-PIA17563
+[3] Event Horizon Telescope Collaboration, https://eventhorizontelescope.org/blog/astronomers-reveal-first-image-black-hole-heart-our-galaxy
