editor stuff (edit 1-9.md)

--- a/docs/1.md
+++ b/docs/1.md
@@ -7,13 +7,13 @@ hide:
 <figure>
     <img style="width:100%" src="https://live.staticflickr.com/5555/14773475650_72d11fd8dc_b.jpg"/></img>
     <figcaption align = "left">
-    <small>An artist's rendition of a Neutron star. Note the jets being emitted from the top and bottom, as a result of strong magnetic fields.</small>
+    <small>An artist's rendition of a neutron star. Note the jets being emitted from the top and bottom, as a result of strong magnetic fields.</small>
     </figcaption>
 </figure>
 
-> *From the death of a supergiant star, <br>
-> came a smaller star shining oh so bright.   <br>
-> In cold, dead space with darkness like tar,    <br>
+> *From the death of a supergiant star,        <br>
+> came a smaller star shining oh so bright.    <br>
+> In cold, dead space with darkness like tar,  <br>
 > neutron stars fight back, this world's last light.*
 
 You may have heard of neutron stars before, but what are they really?
@@ -25,17 +25,17 @@ Stars have lives, just like the rest of us. They are born, grow, age, and die. F
 <figure>
     <img src="https://images-assets.nasa.gov/image/PIA17563/PIA17563~medium.jpg"></img>
     <figcaption align = "left">
-    <small>An image of the Crab Nebula, the remains of a Supernova, as taken by the Hubble Space Telescope and Herschel Space Observatory. This is a composite image, meaning that multiple images were processed together.</small>
+    <small>An image of the Crab Nebula, the remains of a supernova, as taken by the Hubble Space Telescope and Herschel Space Observatory. This is a composite image, meaning that multiple images were processed together.</small>
     </figcaption>
 </figure>
 
-During a supernova, the matter of the star goes through cycles of falling inward, compressing, heating up, and expanding. How exactly this all happens is complicated, but in summary, stellar death begins with the exhaustion of fuel. When this happens, nuclear fusion can no longer happen, and the energy that was providing heat to the star, keeping it from falling in on itself, disappears. What follows is collapse, compressing the plasma of the star to a huge degree. When a gas (or plasma) decreases in volume, temperature and pressure must increase to compensate.
+During a supernova, the matter of the star goes through cycles of falling inward, compressing, heating up, and expanding. How exactly all this happens is complicated, but in summary, stellar death begins with the exhaustion of its fuel. When this happens, nuclear fusion can no longer happen, and the energy that was providing heat to the star, keeping it from falling in on itself, disappears. What follows is collapse, compressing the plasma of the star to a huge degree. When a gas (or plasma) decreases in volume, temperature and pressure must increase to compensate (by PV = nRT).
 
 This increase in temperature and pressure triggers another round of fusion, fusing heavier elements like carbon and neon together. Surging outward, the star expands once more... only to collapse, because it can't fuse heavier elements anymore. So go the death throes of the star, progressively and more rapidly fusing elements up the chain. And then, we hit iron. Iron is the most stable element. Fusing iron, rather than giving off energy, **drains** energy. There will be only one more expansion.
 
-The remains of the star rush in towards the centre, building up insane pressures as they pick up momentum. But even as they build momentum, atoms at the centre push closer and closer to one another, until they can't get any closer. The wavefront of the incoming stellar matter impinges on the hyper-dense core, bounces, sends shockwaves back out through the dying star.
+The remains of the star rush in towards the centre, building up insane pressures as they pick up momentum. But even as they build momentum, atoms at the centre push closer and closer to one another, until they can't get any closer. The wavefront of the incoming stellar matter impinges on the hyper-dense core, bounces, and sends shockwaves back out through the dying star.
 
-No matter what happens next, the vast majority of the star is blown off in a cataclysmic explosion that creates what's (poorly termed) as a supernova remnant, a new stellar dust and gas cloud. If the star was big enough, then the very insides of the star get so dense that gravity causes the formation of a black hole, a region of space where all matter is drawn in irreversibly towards a singularity, and gravity overcomes even light.
+No matter what happens next, the vast majority of the star is blown off in a cataclysmic explosion that creates what's called a supernova remnant (poorly termed), a new stellar dust and gas cloud. If the star was big enough, then the very insides of the star get so dense that gravity causes the formation of a black hole, a region of space where all matter is drawn in irreversibly towards a singularity, and gravity overcomes even light.
 
 <figure>
     <img src="https://static.projects.iq.harvard.edu/files/styles/os_files_xxlarge/public/eht/files/avgimage_afmhot_us_edit.png?m=1652355847&itok=cMbEDmsL"></img>
@@ -44,7 +44,7 @@ No matter what happens next, the vast majority of the star is blown off in a cat
     </small></figcaption>
 </figure>
 
-If the star wasn't quite massive enough, though, what's formed is instead a neutron star, and that's where things get weird. All stars are permanently in a precarious balance between collapse and expansion, with the inward force of gravity being perfectly balanced by the outwards pressure of the hot plasma. Neutron stars are different, though. Heat-based pressure being insufficient to overcome gravity, they're stopped from collapsing by the Pauli Exclusion principle.
+If the star wasn't quite massive enough, though, what's formed is instead a neutron star, and that's where things get weird. All stars are permanently in a precarious balance between collapse and expansion, with the inward force of gravity being perfectly balanced by the outwards pressure of the hot plasma. Neutron stars are different, though. Heat-based pressure being insufficient to overcome gravity, they're stopped from collapsing by the Pauli exclusion principle.
 
 But what is this principle?
 
