--- a/docs/2.md
+++ b/docs/2.md
@@ -1,9 +1,9 @@
 ## Pauli and his Principle
-The Pauli Exclusion Principle is something that we all encounter on a daily basis. It is the
+The Pauli exclusion principle is something that we all encounter on a daily basis. It is the
 law of the universe that prevents your laptop from falling through your lap. Formally, it
-states that two Fermions (the particles that make up most matter) cannot occupy the same quantum states. More informally, two things cannot be in the same place, at the same energy level, with the same spin, at the same time. In neutron stars, this means that when mere heat is insufficient to halt collapse, the particles physically bumping into each other halts it instead.
+states that two fermions (the particles that make up most matter) cannot occupy the same quantum states. More informally, two things cannot be in the same place, at the same energy level, with the same spin, at the same time. In neutron stars, this means that when mere heat is insufficient to halt collapse, the particles physically bumping into each other halts it instead.
 
-This is called neutron degeneracy pressure. To understand it more thoroughly, we must introduce another principle: Heisenberg Uncertainty.
+This is called neutron degeneracy pressure. To understand it more thoroughly, we must introduce another principle: Heisenberg uncertainty.
 
 ## Heisenberg's Uncertainty Principle
 <figure>
@@ -25,7 +25,7 @@ how many places the particle could be in. $\Delta p$ refers to the uncertainty i
 ## Inside Neutron Stars
 So how is this relevant? In neutron stars, where particles are compacted extremely close together, $\Delta x$ is very small. Correspondingly, this means that $\Delta p$ must be very large. Because of this, the average kinetic energy of the particles must be very large. (Kinetic Energy is related to momentum by $KE =\frac{p^2}{2m}$)
 
-We can see, then, that if high compression necessitates low position uncertainty, and low position uncertainty means high momentum, and high momentum means high energy, a tremendous amount of energy is required to squeeze neutron stars any further. This manifests itself as an outward pressure of sorts, referred to as degeneracy pressure. Matter, such as the plasmas in neutron stars, that is stopped from being crushed mainly by degeneracy pressure is known as degenerate matter.
+We can see, then, that if high compression necessitates low position uncertainty, and low position uncertainty means high momentum, and high momentum means high energy, a tremendous amount of energy is required to squeeze neutron stars any further. This manifests itself as an outward pressure of sorts, referred to as degeneracy pressure. Matter that is stopped from being crushed mainly by degeneracy pressure, such as the plasma in neutron stars, is known as degenerate matter.
 
 
 ### References
