--- a/docs/4.md
+++ b/docs/4.md
@@ -16,7 +16,7 @@ Go down farther, and we reach the spaghetti phase, where these blobs themselves 
 <figure>
     <img src="https://media.discordapp.net/attachments/775634770045567007/1028518344804008006/unknown.png"/>
     <figcaption align = "left">
-    <small>Visualisations of Nuclear Pasta, as generated via Molecular Dynamics simulations. From top to bottom, Nuclear Lasagna, Nuclear Spaghetti, Nuclear Gnocchi, and ordinary matter.</small>
+    <small>Visualisations of nuclear pasta, as generated via molecular dynamics simulations. From top to bottom, nuclear lasagna, nuclear spaghetti, nuclear gnocchi, and ordinary matter.</small>
     </figcaption>
 </figure>
 
