--- a/docs/6.md
+++ b/docs/6.md
@@ -3,9 +3,9 @@ hide:
 - toc
 ---
 
-As previously mentioned, neutrons are comprised of two down quarks and an up quark. But under particularly extreme pressures and densities, when all lower energy levels are filled, a new possibility arises. Some energy can be expended to turn down quarks into more massive "strange" quarks. The introduction of these strange quarks allows for new configurations, unlocking a new set of energy levels. By accessing these new, lower, energy levels, the energy required to transmute down quarks can be recouped. Thus, the average energy of the particles decreases. Matter that contains strange quarks is referred to as strange matter.
+As previously mentioned, neutrons consists of two down quarks and an up quark. But under particularly extreme pressures and densities, when all lower energy levels are filled, a new possibility arises. Some energy can be expended to turn down quarks into more massive "strange" quarks. The introduction of these strange quarks allows for new configurations, unlocking a new set of energy levels. By accessing these new, lower, energy levels, the energy required to transmute down quarks can be recouped. Thus, the average energy of the particles decreases. Matter that contains strange quarks is referred to as strange matter.
 
-Strange matter is generally though to form blobs, referred to as strangelets, which can range in size from the scale of nuclei to arbitrarily large. When they get to the size of meters, stranglets are usually referred to as strange stars. Quantum Chromodynamics, or QCD, predicts that strange matter is unstable on the tiniest of scales (individual particles), because of the increased mass of the strange quark. However, it also predicts that on larger scales, precisely because of the aforementioned lower energy levels that the presence of strange quarks allows for, strange matter may become more and more stable the more of it there is.
+Strange matter is generally though to form blobs, referred to as strangelets, which can range in size from the scale of nuclei to arbitrarily large. When they get to the size of meters, stranglets are usually referred to as strange stars. Quantum chromodynamics, or QCD, predicts that strange matter is unstable on the tiniest of scales (individual particles), because of the increased mass of the strange quark. However, it also predicts that on larger scales, precisely because of the aforementioned lower energy levels that the presence of strange quarks allows for, strange matter may become more and more stable the more of it there is.
 
 <figure>
 
