--- a/docs/7.md
+++ b/docs/7.md
@@ -12,10 +12,10 @@ The more filled states that have duplicate energy levels, the more degenerate so
 In the context of stars, however, degeneracy takes on a slightly different meaning. We can see that as density increases, degeneracy pressure becomes more of a factor. As such, the degree to which matter is degenerate, in this specific context, is determined by the relative contributions of degeneracy pressure and thermal pressure. Note that, as is implied here, degeneracy pressure is independent of temperature.
 
 That's all a little abstract, so let's simplify matters a bit.
-If something has low density (for a star) and high temperature, it's probably normal matter. <br/>
-If something has high density and low temperature (for a star), it's probably degenerate matter. <br/>
-If something has low density and low temperature, it's probably still normal matter. <br/>
-If something has high density and high temperature, it might be degenerate matter. <br/>
+If something has low density (for a star) and high temperature, it's probably normal matter. <br>
+If something has high density and low temperature (for a star), it's probably degenerate matter. <br>
+If something has low density and low temperature, it's probably still normal matter. <br>
+If something has high density and high temperature, it might be degenerate matter. <br>
 
 The last one is less clear-cut than the others. For instance, we have examples of degenerate matter abruptly turning non-degenerate, through a sudden influx of heat.
 
